--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.1",
     "cloudinary": "^1.28.1",
@@ -18,12 +20,9 @@
     "mongoose": "^5.0.16",
     "multer": "^1.3.0",
     "nodemailer": "^4.6.4",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   },
-  "devDependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/express": "^4.17.13",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
-  }
+  "devDependencies": {}
 }
